updated movement and gameBoard